src/objects/Contact_Service_Connector__c.object
<CustomObject>
    <description>Junction object for Contacts and Services</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Signposted Services</relationshipLabel>
        <relationshipName>Service_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Worker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <referenceTo>Services__c</referenceTo>
        <relationshipLabel>Signposted Contacts</relationshipLabel>
        <relationshipName>Service_Involvement</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date involvement with service started</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Service Involvement</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Service Users ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Involvement</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>